# lktris

./: makefile
app/aboot/: aboot.c
app/game/: fb.c  font.c  game.c  main.c  rules.mk  stone.c
app/game/include/: common.h  fb.h  font.h  game.h  main.h  stone.h
app/game/include/fonts/: font_sans_25.h  font_sans_40.h
app/game/states/: gameover.c  ingame.c  menu.c
dev/fbcon/: fbcon.c
include/: debug.h  stdlib.h
lib/libc/: rand.c
platform/msm_shared/: mipi_dsi.c  rules.mk  smem.h  timer.c
platform/msm_shared/include/: mipi_dsi.h
project/: condor.mk  msm8960.mk
sdlemu/: CMakeLists.txt  main.c
